2003-01-28  James Antill  <james@and.org>

	* src/gtetrinet.c (gtetrinet_poll_func): Added fast poll() function.

2003-01-25  Jordi Mallach  <jordi@sindominio.net>

	* src/gtetrinet.c: remove unneeded <locale.h> include.

2003-01-24  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added "no" to ALL_LINGUAS.
	
2003-01-24  Jordi Mallach  <jordi@sindominio.net>

	* gtetrinet.desktop.in: add bugzilla stuff.

2003-01-23  Jordi Mallach  <jordi@sindominio.net>

	* configure.in: Added "nl" to ALL_LINGUAS.

2003-01-18  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "es" to ALL_LINGUAS.

2003-01-18  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "sv" to ALL_LINGUAS.

2003-01-17  Jordi Mallach  <jordi@sindominio.net>

	* src/commands.c (about_command): remove gettext marks from author
	names, as there's no non-ASCII character to translate.

2003-01-11  Jordi Mallach  <jordi@sindominio.net>

	* NEWS, configure.in: released gtetrinet 0.5.2.

2003-01-10  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: updated for 0.5.2.
	* TODO: added a few requested items.

2003-01-10  Jordi Mallach  <jordi@sindominio.net>

	* src/config.c (config_loadconfig): use gdk_keyval_to_lower instead of
	gdk_keyval_to_upper, so gtetrinet 0.5.2 configurations are usable with
	older versions.
	* src/dialogs.c (key_dialog_callback): likewise.
	* src/gtetrinet.c (keypress): likewise.
	* src/tetrinet.c (tetrinet_key): likewise.

2003-01-10  Dani Carbonell  <bocata@panete.net>

	* src/dialogs.c (connectdialog_connected): hide the window only if
	it really existed (fixes the -c bug).

	* src/fields.c (fields_gmsginputadd): this function was useless,
	removed.
	(fields_gmsginputback): likewise

	* src/fields.h: removed those two function's declarations.

	* src/gtetrinet.c (switch_focus): new function, will handle the
	notebook's tab switching, sending focus where it should be.
	(gtetrinet_key): function cleaned.

	* src/gtetrinet.h: added the function declaration.
